Changes on Tuesday

--- a/catering-service-provider-company.html
+++ b/catering-service-provider-company.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Cateing Services Provider </title>
+  <title>Cateing Services Provider | MangosOrange Services Pvt. Ltd. </title>
   <meta content="We are Corporate, Industrial, Educational Institutes &amp; Hospitals Catering services provider based in Delhi NCR." name="descriptison">
   <meta content="Corporate catering in Delhi, Corporate Catering in India, Industrial Catering in India, Industrial Catering in Delhi NCR, Catering for Educational Institutes, Catering for Skill Development Training Center in India, Catering for Skill Development Training Center in NCR" name="keywords">
 
@@ -41,9 +41,7 @@
       <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://www.linkedin.com/company/mangosorange" target="new" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
     </div>
   </section>
@@ -69,7 +67,7 @@
             <li><a href="about-staffing-services-company-delhi-ncr.html">About Group</a></li>
             <li><a href="group_companies_mangos.html">Group Companies</a></li>
             <li><a href="centre-of-excellence.html">Centre of Excellence</a></li>
-            <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech</a></li>
+            <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech</a></li>
           </ul>
         </li>
           <li class="drop-down"><a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Our Services</a>
@@ -80,7 +78,7 @@
                 <li><a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
                 <li><a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
                 <li><a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-                <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech &amp; Allied Domain</a></li>
+                <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
                 <li class="active"><a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
                 
             </ul>
@@ -131,11 +129,11 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h4>Indutries / Sectors We Serve:</h4>
             <ul>
-              <li><i class="icofont-check-circled"></i>Manufacturing Industries</li>
-              <li><i class="icofont-check-circled"></i>Hospitals &amp; Healthcare</li>
-                <li><i class="icofont-check-circled"></i>Colleges &amp; Universities</li>
-                <li><i class="icofont-check-circled"></i>Residential Skill Development Centers</li>
-                <li><i class="icofont-check-circled"></i>Energy and Infrastructure</li>
+              <li align="justify"><i class="icofont-check-circled"></i>Manufacturing Industries</li>
+              <li align="justify"><i class="icofont-check-circled"></i>Hospitals &amp; Healthcare</li>
+                <li align="justify"><i class="icofont-check-circled"></i>Colleges &amp; Universities</li>
+                <li align="justify"><i class="icofont-check-circled"></i>Residential Skill Development Centers</li>
+                <li align="justify"><i class="icofont-check-circled"></i>Energy and Infrastructure</li>
       
             </ul>
           </div>
@@ -160,7 +158,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="about-staffing-services-company-delhi-ncr.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Carrer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="career.html">Carrer</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact-staffing-solutions-company-delhi-ncr.html">Contact</a></li>
             </ul>
           </div>
@@ -173,7 +171,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="research-and-development.html">Research &amp; Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </div>
@@ -182,7 +180,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi
+              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
               Ghaziabad, UP - 201010<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
