--- a/centre-of-excellence.html
+++ b/centre-of-excellence.html
@@ -43,8 +43,6 @@
       <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
         <a href="https://www.linkedin.com/company/mangosorange" target="new" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
     </div>
@@ -71,7 +69,7 @@
             	<li><a href="about-staffing-services-company-delhi-ncr.html">About Group</a></li>
 				      <li><a href="group_companies_mangos.html">Group Companies</a></li>
             	<li class="active"><a href="centre-of-excellence.html">Centre of Excellence</a></li>
-              <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech</a></li>
+              <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech</a></li>
             </ul>
           </li>
           <li class="drop-down"><a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Our Services</a>
@@ -82,7 +80,7 @@
                 <li><a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
                 <li><a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
                 <li><a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-                <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech &amp; Allied Domain</a></li>
+                <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
                 <li><a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </li>
@@ -130,8 +128,8 @@
           <h4>Flexible, modular framework to enable youth to obtain industry relevant qualifications</h4>
           <div class="col-lg-12 pt-4 pt-lg-0 content">
             <ul>
-                <li><i class="icofont-check-circled"></i>To provide the students with a flexible, modular system for pursuing their higher education from 10th Pass to ITI/Diploma/Degree Level while they work.</li>
-                <li><i class="icofont-check-circled"></i>To recognize prior learning &amp; on the job learning and translated into credits which can be accumulated and will form a part of the earned qualification</li>
+                <li align="justify"><i class="icofont-check-circled"></i>To provide the students with a flexible, modular system for pursuing their higher education from 10th Pass to ITI/Diploma/Degree Level while they work.</li>
+                <li align="justify"><i class="icofont-check-circled"></i>To recognize prior learning &amp; on the job learning and translated into credits which can be accumulated and will form a part of the earned qualification</li>
             </ul>
           </div>
                
@@ -139,16 +137,16 @@
 
       <div class="col-lg-6">
         <h4>Center of Excellence <strong>(COE)</strong> @ BTKIT Campus</h4>
-        <p>
+        <p align="justify">
          Bipin Tripathi Kumaon Institute of Technology <strong>(BTKIT)</strong>, located at Dwarahat, Near Ranikhet, Dist. Almora, Uttarakhand is one of the finest institutions of Uttarakhand, maintaining an excellent academic record. </p>
          <div class="col-lg-12 pt-4 pt-lg-0 content">
           <ul>
-            <li><i class="icofont-check-circled"></i>
+            <li align="justify"><i class="icofont-check-circled"></i>
 			  In the larger interest of the society and the nation, BTKIT has been taking initiative to encourage Entrepreneurship and self – employment and for this purpose the BTKIT has set up an Incubation, primarily to provide facilities and knowledge in technology-intensive areas.
 			  <br>	
 			  The incubation Center will be a research platform for students, industry, alumni, start-ups, small and medium enterprises, faculty and researchers by helping them commercialize technology innovations.
 			  </li>
-            <li><i class="icofont-check-circled"></i> MangosOrange works with <strong>BTKIT's</strong> Training and Placement cell to provide technical and professional exposure, enhance student skills and bring better job opportunities to the institute.</li>
+            <li align="justify"><i class="icofont-check-circled"></i> MangosOrange works with <strong>BTKIT's</strong> Training and Placement cell to provide technical and professional exposure, enhance student skills and bring better job opportunities to the institute.</li>
           </ul>
       </div>
 
@@ -159,7 +157,7 @@
         </p> -->
       </div>
       <div class="col-lg-6">
-        <img src="assets/img/testimonials/offer-5.jpeg" class="img-fluid" alt="">
+        <img src="assets/img/MOU-04.jpeg" class="img-fluid" alt="">
       </div>
     </div>
 	  </div>
@@ -200,7 +198,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="about-staffing-services-company-delhi-ncr.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Carrer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="career.html">Carrer</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact-staffing-solutions-company-delhi-ncr.html">Contact</a></li>
             </ul>
           </div>
@@ -213,7 +211,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="research-and-development.html">Research &amp; Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </div>
@@ -222,7 +220,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi
+              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
               Ghaziabad, UP - 201010<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
