--- a/group_companies_mangos.html
+++ b/group_companies_mangos.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Staffing Services Provider Company</title>
+  <title>Staffing Services Provider Company | MangosOrange Services Pvt. Ltd</title>
   <meta content="We are Staffing Solutions, HR Solutions, Payroll Management &amp; Recruitment agency based in Delhi NCR." name="descriptison">
   <meta content="staffing companies in Delhi, staffing companies in India, Contract Labour Supplier, Contract Labour Supplier in Delhi NCR, Payroll Services in Delhi NCR, Recruitment agency in Delhi NCR." name="keywords">
 
@@ -41,9 +41,7 @@
       <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://www.linkedin.com/company/mangosorange" target="new" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
     </div>
   </section>
@@ -69,7 +67,7 @@
             	<li><a href="about-staffing-services-company-delhi-ncr.html">About Group</a></li>
 				      <li class="active"><a href="group_companies_mangos.html">Group Companies</a></li>
             	<li><a href="centre-of-excellence.html">Centre of Excellence</a></li>
-              <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech</a></li>
+              <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech</a></li>
             </ul>
           </li>
           <li class="drop-down"><a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Our Services</a>
@@ -80,7 +78,7 @@
                 <li><a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
                 <li><a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
                 <li><a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-                <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech &amp; Allied Domain</a></li>
+                <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
                 <li><a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </li>
@@ -123,7 +121,7 @@
 			      <div class="blog-author clearfix">
               <!--<img src="assets/img/blog-author.jpg" class="rounded-circle float-left" alt="">-->
               <h3>MangosOrange Services Pvt. Ltd.</h3>
-              <p>
+              <p align="justify">
                 MangosOrange Services Private Limited is Parent company of MangosOrange Group. It deals in Staffing Solutions, Payroll Outsourcing, Contract Manpower Sourcing, Integrated Facility Management Services. This company is serving to more than 30 clients &amp; more than 12 cities in India.
               </p>
             </div><!-- End blog author bio -->
@@ -133,7 +131,7 @@
 			      <div class="blog-author clearfix">
               <!--<img src="assets/img/blog-author.jpg" class="rounded-circle float-left" alt="">-->
               <h3>MangosOrange Trainning &amp; Technical Services Pvt. Ltd. </h3> 
-              <p>
+              <p align="justify">
                 MangosOrange Trainning &amp; Technical Services Private Limited deals with various Work Integrated Skill training &amp; Apprenticeship programs. MTTSPL also deals with various skill development programs including National Apprenticeship Promotion Scheme (NAPS), National Apprenticeship Training Scheme (NATS) &amp; Other Skill Development Programs sponsored by Various Ministries / Departments. 
               </p>
             </div><!-- End blog author bio -->
@@ -143,7 +141,7 @@
 			      <div class="blog-author clearfix">
               <!--<img src="assets/img/blog-author.jpg" class="rounded-circle float-left" alt="">-->
               <h3>MangosOrange Agritech India Pvt. Ltd. </h3> 
-              <p>
+              <p align="justify">
                 MangosOrange Agritech India Private Limited is engaged in Research &amp; Development, Skill Development Initiatives in Agritech &amp; Allied Domains. The Comapny is engaged in research &amp; development in Hydroponics, Aeroponics and latest polyhouse technologies. 
               </p>
             </div><!-- End blog author bio -->
@@ -153,7 +151,7 @@
 			      <div class="blog-author clearfix">
               <!--<img src="assets/img/blog-author.jpg" class="rounded-circle float-left" alt="">-->
               <h3>Shring Training &amp; Development Foundation </h3>
-              <p>
+              <p align="justify">
                 Shring Training &amp; Development Foundation is "Not-For-Profit" arm of MangosOrange Group registered as Section 8 of Companies Act 2013. This vertical is working for the upliftment of Economical Weaker Sections of the Society by helping them in Higher Education and Promoting Wage Employemnt as well as Self-Employment. 
               </p>
             </div><!-- End blog author bio -->
@@ -163,7 +161,7 @@
 			     <div class="blog-author clearfix">
               <!--<img src="assets/img/blog-author.jpg" class="rounded-circle float-left" alt="">-->
               <h3>Shokuji Foods Private Limited </h3>
-              <p>
+              <p align="justify">
                 Shokuji Foods Private Limited is engaged in offering customized catering solutions for different locations PAN India. The company has distinguished itself as a quality Catering solution provider at cost-effective prices through a well-managed management set up.
               </p>
             </div><!-- End blog author bio -->
@@ -190,7 +188,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="about-staffing-services-company-delhi-ncr.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Carrer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="career.html">Carrer</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact-staffing-solutions-company-delhi-ncr.html">Contact</a></li>
             </ul>
           </div>
@@ -203,7 +201,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="research-and-development.html">Research &amp; Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </div>
@@ -212,7 +210,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi
+              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
               Ghaziabad, UP - 201010<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
