--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
       <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
         <a href="https://www.linkedin.com/company/mangosorange" target="new" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
     </div>
@@ -162,15 +160,15 @@
         </div>
         <div class="col-lg-6 pt-4 pt-lg-0 content">
           <h3>Welcome to MangosOrange Group</h3>
-          <p>
+          <p align="justify">
            MangosOrange Group aspires to be a fortune 500 company in the coming years. We are an integrated service provider company with a knack of customized solutions for our esteemed national &amp; multinational brands. With a cumulative team experience of more than 100 years we have delivered quality staffing solutions, skill development projects, Integrated Facility Management Services. Some of Our Services Include:
           </p>
           <ul>
-            <li><i class="icofont-check-circled"></i> Staffing Solutions including Contract Labour &amp; Payroll Services.</li>
-			<li><i class="icofont-check-circled"></i>Work Integrated Skill Training &amp; Apprenticeship <strong>(WISTA).</strong></li>  
-            <li><i class="icofont-check-circled"></i> Vocational Education &amp; Skill Development Projects.</li>
-            <li><i class="icofont-check-circled"></i> Catering Services in Industries, Hospitals, Skill Development Centers, Hostels &amp; other Establishments.</li>
-    <li><i class="icofont-check-circled"></i> Research &amp; Development in Agritech &amp; Allied Domain.</li>
+            <li align="justify"><i class="icofont-check-circled"></i> Staffing Solutions including Contract Labour &amp; Payroll Services.</li>
+			      <li align="justify"><i class="icofont-check-circled"></i>Work Integrated Skill Training &amp; Apprenticeship <strong>(WISTA).</strong></li>  
+            <li align="justify"><i class="icofont-check-circled"></i> Vocational Education &amp; Skill Development Projects.</li>
+            <li align="justify"><i class="icofont-check-circled"></i> Catering Services in Industries, Hospitals, Skill Development Centers, Hostels &amp; other Establishments.</li>
+            <li align="justify"><i class="icofont-check-circled"></i> Research &amp; Development in Agritech &amp; Allied Domain.</li>
           </ul>
           <!--
           <p>
@@ -197,7 +195,7 @@
             <div class="icon-box">
               <i class="icofont-architecture"></i>
               <h3><a href="staffing-services-company-delhi-ncr.html">Staffing Solutions</a></h3>
-              <p>Staffing Solutions for all major industries like Automobile, Electrical, Electronics, Pharmaceutical, Food, Plastic, Educational. </p>
+              <p align="justify">Staffing Solutions for all major industries like Automobile, Electrical, Electronics, Pharmaceutical, Food, Plastic, Educational. </p>
             </div>
           </div>
           
@@ -205,14 +203,14 @@
             <div class="icon-box">
               <i class="icofont-engineer"></i>
               <h3><a href="work-integrated-skill-training-apprenticeship.html">WISTA</a></h3>
-              <p>Flexible, Modular framework to enable youth to obtain industry relevant qualifications &amp; On-The-Job Training's</p>
+              <p align="justify">Flexible, Modular framework to enable youth to obtain industry relevant qualifications &amp; On-The-Job Training's</p>
             </div>
           </div>
 			 <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="icofont-workers-group"></i>
               <h3><a href="contract-labour-sourcing.html">Contract Labour</a></h3>
-              <p>We provide solutions to organizations right from junior level to senior level positions with 100% Legal compliances.</p>
+              <p align="justify">We provide solutions to organizations right from junior level to senior level positions with 100% Legal compliances.</p>
             </div>
           </div>
         </div>
@@ -227,21 +225,21 @@
             <div class="icon-box">
               <i class="icofont-people"></i>
               <h3><a href="payroll-outsourcing.html">Payroll Outsourcing</a></h3>
-              <p>Fully Automated Process to handle your payroll outsourcing process so that possibilities of human errors eradicated. </p>
+              <p align="justify">Fully Automated Process to handle your payroll outsourcing process so that possibilities of human errors eradicated. </p>
             </div>
           </div>
          <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="icofont-brainstorming"></i>
               <h3><a href="skill-development-vocational-education-services.html">Skill Development</a></h3>
-              <p>We are End to End Solutions Providers for Skill Development Projects sponsored by different agencies &amp; Ministries.</p>
+              <p align="justify">We are End to End Solutions Providers for Skill Development Projects sponsored by different agencies &amp; Ministries.</p>
             </div>
           </div>
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="icofont-labour"></i>
               <h3><a href="integrate-facility-management.html">Facility Management</a></h3>
-              <p>IFM can increase operational efficiencies &amp; drive savings across a business to better meet organizational goals.</p>
+              <p align="justify">IFM can increase operational efficiencies &amp; drive savings across a business to better meet organizational goals.</p>
             </div>
           </div>
         </div>
@@ -354,7 +352,7 @@
 
         <div class="section-title">
           <h2>Clients</h2>
-          <p>We are always striving to improve the service we offer to our customers by listening and responding to their needs. We are constantly upgrading our services and our goal is to make the service standards to the levels to which you can expect us to perform when delivering our services.</p>
+          <p align="justify">We are always striving to improve the service we offer to our customers by listening and responding to their needs. We are constantly upgrading our services and our goal is to make the service standards to the levels to which you can expect us to perform when delivering our services.</p>
         </div>
 
         <div class="owl-carousel clients-carousel">
@@ -401,7 +399,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="about-staffing-services-company-delhi-ncr.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Carrer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="career.html">Carrer</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact-staffing-solutions-company-delhi-ncr.html">Contact</a></li>
             </ul>
           </div>
@@ -423,7 +421,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi
+              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
               Ghaziabad, UP - 201010<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
