--- a/skill-development-vocational-education-services.html
+++ b/skill-development-vocational-education-services.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Skill Development &amp; Vocational Education Provider Company</title>
+  <title>Skill Development &amp; Vocational Education Provider Company | MangosOrange Services Pvt. Ltd</title>
   <meta content="We are Skill Development &amp; Vocational Education Provider company Based in Delhi NCR." name="descriptison">
   <meta content="Skill Development, Vocational Education, Learn while Earn, Skill Development in Industries, Industrial OJT" name="keywords">
 
@@ -42,9 +42,7 @@
       <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://www.linkedin.com/company/mangosorange" target="new" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
     </div>
   </section>
@@ -70,7 +68,7 @@
             <li><a href="about-staffing-services-company-delhi-ncr.html">About Group</a></li>
             <li><a href="group_companies_mangos.html">Group Companies</a></li>
             <li><a href="centre-of-excellence.html">Centre of Excellence</a></li>
-            <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech</a></li>
+            <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech</a></li>
           </ul>
         </li>
           <li class="drop-down"><a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Our Services</a>
@@ -81,7 +79,7 @@
                 <li><a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
                 <li><a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
                 <li><a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-                <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech &amp; Allied Domain</a></li>
+                <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
                 <li><a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
                 
             </ul>
@@ -182,11 +180,11 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h4>Schemes / Programs implemented by us:</h4>
             <ul>
-              <li><i class="icofont-check-circled"></i>Work Integrated Skill Training &amp; Apprenticeship (WISTA)</li>
-              <li><i class="icofont-check-circled"></i>Certification and Bachelor of Vocational Studies (B. Voc.)</li>
-                <li><i class="icofont-check-circled"></i>Pradhan Mantri Kaushal Vikas Yojana (PMKVY)</li>
-                <li><i class="icofont-check-circled"></i>Deen Dayal Grameen Kaushalya Yojana (DDU-GKY)</li>
-                <li><i class="icofont-check-circled"></i>State Sponsored Skill Development Projects</li>
+              <li align="justify"><i class="icofont-check-circled"></i>Work Integrated Skill Training &amp; Apprenticeship (WISTA)</li>
+              <li align="justify"><i class="icofont-check-circled"></i>Certification and Bachelor of Vocational Studies (B. Voc.)</li>
+                <li align="justify"><i class="icofont-check-circled"></i>Pradhan Mantri Kaushal Vikas Yojana (PMKVY)</li>
+                <li align="justify"><i class="icofont-check-circled"></i>Deen Dayal Grameen Kaushalya Yojana (DDU-GKY)</li>
+                <li align="justify"><i class="icofont-check-circled"></i>State Sponsored Skill Development Projects</li>
             </ul>
           </div>
 
@@ -211,7 +209,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="about-staffing-services-company-delhi-ncr.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Carrer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="career.html">Carrer</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact-staffing-solutions-company-delhi-ncr.html">Contact</a></li>
             </ul>
           </div>
@@ -224,7 +222,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="research-and-development.html">Research &amp; Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://mangosorangeagritech.in/" target="_blank">Agritech  &amp; Allied Domain</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </div>
@@ -233,7 +231,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi
+              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
               Ghaziabad, UP - 201010<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
