--- a/work-integrated-skill-training-apprenticeship.html
+++ b/work-integrated-skill-training-apprenticeship.html
@@ -43,9 +43,7 @@
       <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://www.linkedin.com/company/mangosorange" target="new" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
     </div>
   </section>
@@ -82,7 +80,7 @@
                 <li><a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
                 <li><a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
                 <li><a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-                <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech &amp; Allied Domain</a></li>
+                <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
                 <li><a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </li>
@@ -128,42 +126,42 @@
             <p align="justify">From temporary and contract placement solutions, training, and engagement programs, to customized retail services, we offer a suite of staffing services that help you manage and grow your business efficiently. </p>
             <div class="col-lg-12 pt-4 pt-lg-0 content">
               <ul>
-                  <li><i class="icofont-check-circled"></i>To implement work integrated ITIs via the Flexi MoU signed DGT for NCVT certifications like Assembly Line Fitter, Production Technician, Industrial Electrician etc.</li>
-                  <li><i class="icofont-check-circled"></i>Providing apprentices, trainees & workforce solutions to the industry in semi-skilled & skilled worker categories.</li>
-                  <li><i class="icofont-check-circled"></i>Creating a flexible, modular framework enabling youth to obtain industry relevant qualifications while interning or working with the industry.</li>
-                  <li><i class="icofont-check-circled"></i>Industry Integration for imparting market relevant skills and enabling pathways between vocational education system & higher education.</li>
+                  <li align="justify"><i class="icofont-check-circled"></i>To implement work integrated ITIs via the Flexi MoU signed DGT for NCVT certifications like Assembly Line Fitter, Production Technician, Industrial Electrician etc.</li>
+                  <li align="justify"><i class="icofont-check-circled"></i>Providing apprentices, trainees & workforce solutions to the industry in semi-skilled & skilled worker categories.</li>
+                  <li align="justify"><i class="icofont-check-circled"></i>Creating a flexible, modular framework enabling youth to obtain industry relevant qualifications while interning or working with the industry.</li>
+                  <li align="justify"><i class="icofont-check-circled"></i>Industry Integration for imparting market relevant skills and enabling pathways between vocational education system & higher education.</li>
                   </ul>
            </div>
             <br>
 
-          <h4>Flexible, modular framework to enable youth to obtain industry relevant qualifications</h4>
+          <h4 align="justify">Flexible, modular framework to enable youth to obtain industry relevant qualifications</h4>
           <div class="col-lg-12 pt-4 pt-lg-0 content">
             <ul>
-                <li><i class="icofont-check-circled"></i>To provide the students with a flexible, modular system for pursuing their higher education from 10th Pass to ITI/Diploma/Degree Level while they work.</li>
-                <li><i class="icofont-check-circled"></i>To recognize prior learning & on the job learning and translated into credits which can be accumulated and will form a part of the earned qualification</li>
+                <li align="justify"><i class="icofont-check-circled"></i>To provide the students with a flexible, modular system for pursuing their higher education from 10th Pass to ITI/Diploma/Degree Level while they work.</li>
+                <li align="justify"><i class="icofont-check-circled"></i>To recognize prior learning & on the job learning and translated into credits which can be accumulated and will form a part of the earned qualification</li>
             </ul>
           </div>
                <br>
 
-          <h4>Industry Integration for imparting market relevant skills</h4>
+          <h4 align="justify">Industry Integration for imparting market relevant skills</h4>
             <div class="col-lg-12 pt-4 pt-lg-0 content">
                 <ul>
-                  <li><i class="icofont-check-circled"></i>To develop an understanding of the manufacturing sector’s processes and systems and improve productivity & efficiency.</li>
-                  <li><i class="icofont-check-circled"></i>To enhance the learner’s intellectual and transferable skills, especially focusing on manufacturing sector specific knowledge and practices.</li>
-                  <li><i class="icofont-check-circled"></i>To provide opportunities to apply the skills gained through industry integrated / live projects.</li>
-                  <li><i class="icofont-check-circled"></i>To augment the ability to plan, execute manufacturing and production functions efficiently.</li>
+                  <li align="justify"><i class="icofont-check-circled"></i>To develop an understanding of the manufacturing sector’s processes and systems and improve productivity & efficiency.</li>
+                  <li align="justify"><i class="icofont-check-circled"></i>To enhance the learner’s intellectual and transferable skills, especially focusing on manufacturing sector specific knowledge and practices.</li>
+                  <li align="justify"><i class="icofont-check-circled"></i>To provide opportunities to apply the skills gained through industry integrated / live projects.</li>
+                  <li align="justify"><i class="icofont-check-circled"></i>To augment the ability to plan, execute manufacturing and production functions efficiently.</li>
                  </ul>
             </div>
       </div>
 
       <div class="col-lg-6">
-        <h4>Types of programs and regulatory compliance</h4>
-        <p>
+        <h4 align="justify">Types of programs and regulatory compliance</h4>
+        <p align="justify">
          <strong>Regulatory Framework:</strong> Directorate General of Training (DGT, the apex body for governance of ITIs & NCVT), Ministry of Skill Development & Entrepreneurship, Govt. of India given approval to Centurion – Gram Tarang to operationalize these programs through following MoUs</p>
          <div class="col-lg-12 pt-4 pt-lg-0 content">
           <ul>
-            <li><i class="icofont-check-circled"></i><strong>‘Flexi MoU’</strong> with Centurion-Gram Tarang which gives permission to partner with industries to run regular NCVT ITI courses (Fitter, Electrician, Welder & Turner) in a flexible delivery mode while they work with the industry.</li>
-            <li><i class="icofont-check-circled"></i><strong>‘Apprenticeship Agreement’</strong> whereby Centurion-Gram Tarang has been given approval to enroll 1,00,000 apprentices into work integrated certification programs over the next 10 years</li>
+            <li align="justify"><i class="icofont-check-circled"></i><strong>‘Flexi MoU’</strong> with Centurion-Gram Tarang which gives permission to partner with industries to run regular NCVT ITI courses (Fitter, Electrician, Welder & Turner) in a flexible delivery mode while they work with the industry.</li>
+            <li align="justify"><i class="icofont-check-circled"></i><strong>‘Apprenticeship Agreement’</strong> whereby Centurion-Gram Tarang has been given approval to enroll 1,00,000 apprentices into work integrated certification programs over the next 10 years</li>
           </ul>
       </div>
 
@@ -174,7 +172,7 @@
         </p> -->
       </div>
       <div class="col-lg-6">
-        <img src="assets/img/testimonials/offer-5.jpeg" class="img-fluid" alt="">
+        <img src="assets/img/testimonials/offer-8.jpeg" class="img-fluid" alt="">
       </div>
     </div>
   </section><!-- End About Section -->
@@ -195,7 +193,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="about-staffing-services-company-delhi-ncr.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Carrer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="career.html">Carrer</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact-staffing-solutions-company-delhi-ncr.html">Contact</a></li>
             </ul>
           </div>
@@ -208,7 +206,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="research-and-development.html">Research &amp; Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </div>
@@ -217,7 +215,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi
+              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
               Ghaziabad, UP - 201010<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
