--- a/contact-staffing-solutions-company-delhi-ncr.html
+++ b/contact-staffing-solutions-company-delhi-ncr.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Contact Us | Mangosorange Services Pvt. Ltd.</title>
+  <title>Contact Us | MangosOrange Services Pvt. Ltd.</title>
   <meta content="We are Catering Services Provider, Contract Staffing, HR Solutions, Payroll Management &amp; Consulting Services company in the field of Skill Development based in Delhi NCR." name="descriptison">
   
   <meta content="Industrial Catering Service, Healthcare Kitchen and Dietary Service, Kitchen Services, Manpower Supply Services in Delhi NCR, Contract Labour Supplier, Contract Labour Supplier in Delhi NCR, Skill Consulting Services, Consultancy services for Skill Development, Payroll Services in Delhi NCR" name="keywords">
@@ -43,9 +43,7 @@
       <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://www.linkedin.com/company/mangosorange" target="new" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
     </div>
   </section>
@@ -71,7 +69,7 @@
             	<li><a href="about-staffing-services-company-delhi-ncr.html">About Group</a></li>
 				      <li><a href="group_companies_mangos.html">Group Companies</a></li>
             	<li><a href="centre-of-excellence.html">Centre of Excellence</a></li>
-                <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech</a></li>
+                <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech</a></li>
             </ul>
           </li>
           <li class="drop-down"><a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Our Services</a>
@@ -82,7 +80,7 @@
                 <li><a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
                 <li><a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
                 <li><a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-                <li><a href="https://agri.mangosorange.com/" target="_blank">Agritech &amp; Allied Domain</a></li>
+                <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
                 <li><a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </li>
@@ -120,7 +118,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Corp. Address</h3>
-              <p>AAG - 11, Shipra Krishna Arcade, Kaushambi Ghaziabad, UP - 201010</p>
+              <p>AAG - 11, Shipra Krishna Arcade, Kaushambi, Ghaziabad, UP - 201010</p>
             </div>
           </div>
 
@@ -203,7 +201,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="about-staffing-services-company-delhi-ncr.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Carrer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="career.html">Carrer</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact-staffing-solutions-company-delhi-ncr.html">Contact</a></li>
             </ul>
           </div>
@@ -216,7 +214,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="integrate-facility-management.html">Integrated Facility Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="research-and-development.html">Research &amp; Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </div>
@@ -225,7 +223,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi
+              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
               Ghaziabad, UP - 201010<br><br>
               <strong>Phone:</strong> <a href="tel:+91-120-4567 841">+91-120-4567 841</a><br>
               <strong>Email:</strong> <a href="mailto:info@mangosorange.co.in">info@mangosorange.co.in</a><br>
