--- a/services-staffing-solutions-manpower-company-delhi-ncr.html
+++ b/services-staffing-solutions-manpower-company-delhi-ncr.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Our Services</title>
+  <title>Our Services | MangosOrange Services Pvt. Ltd.</title>
   <meta content="We are Staffing Solutions Provider, Contract Staffing, HR Solutions, Payroll Management &amp; Vocational Education provider company based in Delhi NCR." name="descriptison">
   
   <meta content="Staffing Solutions Provider, Staffing Solutions Provider in Delhi NCR, Manpower Supply Services in Delhi NCR, Contract Labour Supplier, Contract Labour Supplier in Delhi NCR, Skill Developemnt, Vocational Education, Payroll Services in Delhi NCR" name="keywords">
@@ -42,9 +42,7 @@
       <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://www.linkedin.com/company/mangosorange" target="new" class="linkedin"><i class="icofont-linkedin"></i></a>
       </div>
     </div>
   </section>
@@ -57,7 +55,7 @@
       <!--
         <h1 class="text-light"><a href="index.html"><span>Eterna</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+        <a href="index.html"><img src="assets/img/maipl_logo.png" alt="" class="img-fluid"></a>
       </div>
 
      <nav class="nav-menu d-none d-lg-block">
@@ -67,24 +65,25 @@
           <li class="drop-down"><a href="about-staffing-services-company-delhi-ncr.html">About</a>
           	<ul>
             	<li><a href="about-staffing-services-company-delhi-ncr.html">About Group</a></li>
-				<li><a href="group_companies_mangos.html">Group Companies</a></li>
+				      <li><a href="group_companies_mangos.html">Group Companies</a></li>
             	<li><a href="centre-of-excellence.html">Centre of Excellence</a></li>
-                <li><a href="https://agri.mangosorange.com/">Agritech</a></li>
+                <li><a href="https://mangosorangeagritech.in/">Agritech</a></li>
             </ul>
           </li>
-          <li class="drop-down"><a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Our Services</a>
+          <li class="drop-down active"><a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Our Services</a>
           	<ul>
-            	<li><a href="staffing-services-company-delhi-ncr.html">Staffing Solutions</a></li>
-                <li><a href="skill-development-vocational-education-services.html">Skill Development Projects</a></li>
-                <li><a href="#">Payroll Outsourcing</a></li>
-                <li><a href="#">Contract Labour Sourcing</a></li>
-                <li><a href="#">Integrated Facility Management</a></li>
-                <li><a href="#">Research &amp; Development</a></li>
-                <li><a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
-            </ul>
+              <li><a href="work-integrated-skill-training-apprenticeship.html">Work Integrated Skill Training &amp; Apprenticeship (WISTA)</a></li>  
+              <li><a href="staffing-services-company-delhi-ncr.html">Staffing Solutions</a></li>
+              <li><a href="skill-development-vocational-education-services.html">Skill Development Projects</a></li>
+              <li><a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
+              <li><a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
+              <li><a href="integrate-facility-management.html">Integrated Facility Management</a></li>
+              <li><a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
+              <li><a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
+          </ul>
           </li>
 			<li><a href="gallery.html">Gallery</a></li>
-			<li><a href="#">Carrer</a></li>
+			<li><a href="career.html">Carrer</a></li>
           <li><a href="contact-staffing-solutions-company-delhi-ncr.html">Contact Us</a></li>
 
         </ul>
@@ -103,7 +102,7 @@
           <li><a href="index.html">Home</a></li>
           <li>Services</li>
         </ol>
-        <h2>Services</h2>
+        <h2>Our Services</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -115,49 +114,49 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"><i class="icofont-architecture"></i></div>
               <h4><a href="staffing-services-company-delhi-ncr.html">Staffing Solutions</a></h4>
-              <p>Our comprehensive family of brands address the complex workforce challenges organizations face today, from contingent and permanent staffing to talent management, outsourcing, and talent development. We deliver the solutions that drive your business forward.</p>
+              <p align="justify">Staffing Solutions for all major industries like Automobile, Electrical, Electronics, Pharmaceutical, Food, Plastic, Educational.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="catering-service-provider-company.html">Catering Services</a></h4>
-              <p>We Provide Catering Services for Skill Development Centers, Companies, Hostels & other Establishments. We have a vast experience in catering industry and have existence in 7 states across India.</p>
+              <div class="icon"><i class="icofont-engineer"></i></div>
+              <h4><a href="work-integrated-skill-training-apprenticeship.html">WISTA</a></h4>
+              <p align="justify">Flexible, Modular framework to enable youth to obtain industry relevant qualifications &amp; On-The-Job Training's</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Skill Consulting</a></h4>
-              <p>Our management team have rich experience with over 15+ years experience in Skill Development domain due to which we provide End to End Solutions related to Skill Trainings.</p>
+              <div class="icon"><i class="icofont-workers-group"></i></div>
+              <h4><a href="contract-labour-sourcing.html">Contract Labour</a></h4>
+              <p align="justify">We provide solutions to organizations right from junior level to senior level positions with 100% Legal compliances.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="skill-development-vocational-education-services.html">Skill Development</a></h4>
-              <p>Unemployability is a major challange in India. To address the problem of unemployability and help in employment generation we are aligned to upgrade skills and generate employment.</p>
+              <div class="icon"><i class="icofont-people"></i></div>
+              <h4><a href="payroll-outsourcing.html">Payroll Outsourcing</a></h4>
+              <p align="justify">Fully Automated Process to handle your payroll outsourcing process so that possibilities of human errors eradicated.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Management Consulting</a></h4>
-              <p>Our management consultancy services are focussed on helping your businesses by giving real time solutions for the most critical issues and opportunities in your firm's operation.</p>
+              <div class="icon"><i class="icofont-brainstorming"></i></div>
+              <h4><a href="skill-development-vocational-education-services.html">Skill Developemnt</a></h4>
+              <p align="justify">We are End to End Solutions Providers for Skill Development Projects sponsored by different agencies &amp; Ministries.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Financial Management</a></h4>
-              <p>We provide a broad range of advisory services related to financial management. We offer personalized services to our clients which includes Accounting of Skill Projects, Installment Claim docuemnts preparation and PFMS support.</p>
+              <div class="icon"><i class="icofont-labour"></i></div>
+              <h4><a href="integrate-facility-management.html">Facility Management</a></h4>
+              <p align="justify">IFM can increase operational efficiencies &amp; drive savings across a business to better meet organizational goals.</p>
             </div>
           </div>
 
@@ -183,8 +182,8 @@
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about-staffing-services-company-delhi-ncr.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="services-staffing-solutions-manpower-company-delhi-ncr.html">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Gallery</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Carrer</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="gallery.html">Gallery</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="career.html">Carrer</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="contact-staffing-solutions-company-delhi-ncr.html">Contact</a></li>
             </ul>
           </div>
@@ -193,11 +192,12 @@
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="staffing-services-company-delhi-ncr.html">Staffing Solutions</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="skill-development-vocational-education-services.html">Vocational Education</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Payroll Solutions</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Facility Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Research &amp; Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="catering-service-provider-company.html">Catering Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="skill-development-vocational-education-services.html">Skill Development Projects</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="payroll-outsourcing.html">Payroll Outsourcing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contract-labour-sourcing.html">Contract Labour Sourcing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="integrate-facility-management.html">Integrated Facility Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://mangosorangeagritech.in/" target="_blank">Agritech &amp; Allied Domain</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="catering-service-provider-company.html">Catering &amp; Kitchen Services</a></li>
             </ul>
           </div>
 
@@ -205,7 +205,7 @@
             <h4>Contact Us</h4>
             <p>
               <strong>Corp. Office:</strong> 
-              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi
+              <br>AAG - 11, Shipra Krishna Arcade, Kaushambi,
               Ghaziabad, UP - 201010<br><br>
               <strong>Phone:</strong> +91-120-4567 841<br>
               <strong>Email:</strong> info@mangosorange.co.in<br>
@@ -243,7 +243,6 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/eterna-free-multipurpose-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
